# dtimetracker

./: LICENSE  README.md  TODO.md  main.py  pyproject.toml
dtimetracker/: core.py  persistence.py
dtimetracker/gui/: child.py  main.py  projects.py  reports.py  sessions.py
tests/: test_core.py  test_persistence.py  test_sql_persistence.py
